daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N25_bad_artifact_commitment/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3015840473e1a4916cdcf7068a4eaf8839097fac01f0aa4bd2eb6fcf44ab500ab1060abdfa8035e44ab604af7a70c281b32d88f37bd861d8f124a0c04dd6247422b562b01f602f6
